--- a/src/res/css/style.css
+++ b/src/res/css/style.css
@@ -41,7 +41,7 @@ body {
 	text-decoration:none;
 	text-align:center;
 }.btn:hover {
-	background-color:#cccccc;
+	background-color:#000000;
 }.btn:active {
 	position:relative;
 	top:1px;
@@ -181,6 +181,7 @@ body {
 
 #bbuy-text {
 	margin-top: 50px;
+	margin-left : 17%;
 }
 
 #bbuy-a, #bbuy-b {
@@ -212,7 +213,59 @@ body {
 	padding: 20px 0;
 	max-height: 176px;
 	min-width: 186px;
+	
 }
+.gambar:hover{
+	border-style: solid;
+	border-color: #cccccc;
+	border-width: 15px;
+	padding: 20px 0;
+	
+	
+}
+.gambarhome {
+	border-style: solid;
+	border-color: #cccccc;
+	border-width: 2px;
+	padding: 20px 0;
+	max-height: 176px;
+	min-width: 186px;
+	-webkit-animation: spin 0.5s linear 2s infinite alternate;
+	animation: spin 0.5s linear 2s infinite alternate;
+	
+	-webkit-transition-duration: 0.8s;
+    -moz-transition-duration: 0.8s;
+    -o-transition-duration: 0.8s;
+    transition-duration: 0.8s;
+	
+	-webkit-transition-property: -webkit-transform;
+	-moz-transition-property: -moz-transform;
+	-o-transition-property: -o-transform;
+	transition-property: transform;
+	overflow:hidden;
+	
+}
+.gambarhome:hover{
+
+	-webkit-transform:rotate(360deg);
+    -moz-transform:rotate(360deg); 
+    -o-transform:rotate(360deg);
+	
+}
+@-webkit-keyframes spin {
+	100%
+	{ -webkit-transform: rotate(5deg);
+	} 
+	
+}
+@keyframes spin {
+	100%
+	{ -webkit-transform: rotate(5deg);
+	} 
+	
+}
+
+
 
 .nama-produk {
 	font-size: 18px;
@@ -284,7 +337,7 @@ body {
 }
 
 #pagination a:link, #pagination a:visited {
-	color: #B2000000;
+	color: #B20000;
 }
 
 #pagination > ul {
@@ -325,6 +378,14 @@ body {
 	margin-right: auto;
 	margin-top: 63px;
 	text-align: left;
+	float: left; width: 27%;
+}
+
+.judulbest {
+	background-color: #B20000;
+	color : #ffffff;
+	font-size : 20px
+	
 }
 
 .ShoppingBag {
