--- a/src/css/login.css
+++ b/src/css/login.css
@@ -29,7 +29,7 @@ a#login_pop:hover, a#join_pop:hover {
     right: 0;
     top: 0;
     visibility: hidden;
-    z-index: 1;
+    z-index: 0;
 
     -webkit-transition: opacity .5s;
     -moz-transition: opacity .5s;
@@ -106,9 +106,8 @@ a#login_pop:hover, a#join_pop:hover {
 }
 
 .close:before {
-    color: rgba(255, 255, 255, 0.9);
-    content: "X";
-    font-size: 24px;
+    content: url(../images/close.png);
+    font-size: 20px;
     text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
 }
 
