--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -72,6 +72,7 @@ pre {
 	font-family: 'Lucida Sans Unicode';
 }
 
+
 /***** Content *****/
 #container {
 	width: 1100px; 
@@ -79,7 +80,7 @@ pre {
 	margin-right: auto;
 }
 
-/* Content with Sidebar */
+/* Content With Sidebar */
 #content {
 	background: #fff;
 	margin-bottom: 2em;
@@ -91,16 +92,15 @@ pre {
 	-webkit-border-radius: 5px;
 }
  
-#content img {
-	border-radius: 20px;
-	-webkit-border-radius: 20px;
-	-moz-border-radius: 20px;
-}
-
-#content .view img {
-	border-radius: 0px;
-	-webkit-border-radius: 0px;
-	-moz-border-radius: 0px;
+#imgbarang {
+	width: 400px;
+	border: 10px solid #000;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-moz-box-shadow: 0 0 5px #000;
+	-webkit-box-shadow: 0 0 5px #000;
+	box-shadow: 0px 0px 5px #000;
 }
 
 #content #slideshow #slideshow-inner #myslide img{
@@ -166,8 +166,10 @@ pre {
     font-weight: bold;
     line-height: 1;
 	margin-top: 2px;
+	margin-right: 5px;
     padding: 5px 7px;
     color: #fff;
+	cursor: pointer;
  
     text-align: center;
     text-shadow: 0 -1px 1px #64799e;
@@ -187,4 +189,32 @@ pre {
     -moz-box-shadow: inset 0 1px 0 0 #aec3e5;
     -webkit-box-shadow: inset 0 1px 0 0 #aec3e5;
     box-shadow: inset 0 1px 0 0 #aec3e5;
+}
+
+#buybutton {
+	font-weight: bold;
+    line-height: 1;
+    color: #fff;
+	cursor: pointer;
+ 
+    text-align: center;
+    text-shadow: 0 -1px 1px #64799e;
+ 
+    /* Background gradient */
+    background: #a5b8da;
+    background: -moz-linear-gradient(top, #a5b8da 0%, #7089b3 100%);
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#a5b8da), to(#7089b3));
+ 
+    /* Border style */
+    border: 1px solid #5c6f91;
+    
+    /* Box shadow */
+    -moz-box-shadow: inset 0 1px 0 0 #aec3e5;
+    -webkit-box-shadow: inset 0 1px 0 0 #aec3e5;
+    box-shadow: inset 0 1px 0 0 #aec3e5;
+}
+
+/**** Input Text ****/
+#qty {
+    width: 50px;
 }
