--- a/stylesheets/desktop.css
+++ b/stylesheets/desktop.css
@@ -23,7 +23,7 @@ a {
 	margin:auto;
 }
 
-#header, #content, #footer{
+#header, #footer{
 	width:100%;
 	height:auto;
 	margin:10px 0;
@@ -153,7 +153,7 @@ a {
 	margin:50px;
 }
 
-.formcontainer input[type=text], .formcontainer input[type=password] {
+.formcontainer input[type=text], .formcontainer input[type=password], .formcontainer input[type=date] {
 	width:50%;
 	float:right;
 	margin:0 50px 0 0;
@@ -181,6 +181,11 @@ a {
 	display:none;
 }
 
+#skipregisterkartu {
+	text-align:center;
+	text-decoration:underline;
+}
+
 #footer {
 	width:100%;
 	margin:auto;
@@ -196,6 +201,7 @@ a {
 
 #content{
 	margin:20px 0 50px 0;
+	padding:0 10px;
 	position:relative;
 }
 
@@ -265,6 +271,10 @@ a {
 	font-weight:bold;
 }
 
+#dropdownsort {
+	float:right;
+}
+
 .halaman_category_container {
 	width:95%;
 	height:200px;
@@ -285,6 +295,25 @@ a {
 	display:inline-block;
 }
 
+.inputjumlah {
+	margin-left:10px;
+	width:60px;
+	text-align:right;
+}
+
 .paginasi {
 	float:right;
+}
+
+#detailkeranjang {
+	width:70%;
+	display:inline-block;
+}
+
+#totalkeranjang {
+	width:25%;
+	text-align:center;
+	display:inline-block;
+	vertical-align:top;
+	color:rgb(75, 64, 31);
 }
