--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -80,6 +80,10 @@ pre {
 	margin-right: auto;
 }
 
+#contentcontainer {
+	overflow: hidden; 
+}
+
 /* Content With Sidebar */
 #content {
 	background: #fff;
@@ -87,6 +91,7 @@ pre {
 	overflow: hidden;
 	padding: 20px;
 	width: 700px;
+	float: left;
  	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -154,10 +159,27 @@ pre {
 	padding: 20px;
 	float: right;
     width: 300px;
- 
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
+}
+
+#indexsidebar {
+	background: #fff;
+	font-style: normal;
+	margin-bottom: 2em;
+	overflow: hidden;
+	padding: 20px;
+	float: right;
+    width: 300px;
+    text-align: center;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+}
+
+#indexsidebar img {
+	width: 200px;
 }
 
 /***** Button *****/
