perbaikan css register

--- a/WebContent/css/register.css
+++ b/WebContent/css/register.css
@@ -30,6 +30,10 @@
 	display: none;
 }
 
+#contentfull .field {
+	clear: both;
+}
+
 #contentfull .field:hover .hint {
     position: absolute;
     display: block;
