--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -90,7 +90,7 @@ pre {
 	margin-bottom: 2em;
 	overflow: hidden;
 	padding: 20px;
-	width: 700px;
+	width: 70%;
 	float: left;
  	border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -158,7 +158,7 @@ pre {
 	overflow: hidden;
 	padding: 20px;
 	float: right;
-    width: 300px;
+    width: 20%;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -171,7 +171,7 @@ pre {
 	overflow: hidden;
 	padding: 20px;
 	float: right;
-    width: 300px;
+    width: 20%;
     text-align: center;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -179,7 +179,7 @@ pre {
 }
 
 #indexsidebar img {
-	width: 200px;
+	width: 100%;
 }
 
 /***** Button *****/
