--- a/WebContent/css/halamanbarang.css
+++ b/WebContent/css/halamanbarang.css
@@ -1,3 +1,8 @@
+.sort {
+	width: 750px;
+    height: 50px;
+}
+
 .view {
     width: 300px;
     height: 200px;
@@ -100,4 +105,8 @@
 
 .view:hover a.info {
     transition-delay: 0.2s;
+}
+
+p#sort-text {
+	text-align: right;
 }
