--- a/WebContent/css/header.css
+++ b/WebContent/css/header.css
@@ -198,17 +198,8 @@ ul#menubar .suggestion li a:hover {
 	bottom : 30px;
 }
 
-#mbox {
-	display:none;	
-}
-
-#back_mbox {
-	display: none;	
-}
-
-#fade_mbpx {
-	display:none;	
-}
-}
-}
+#index {
+	width:1100px;
+	margin-left:auto;
+	margin-right:auto;
 }
