--- a/WebContent/css/homepage.css
+++ b/WebContent/css/homepage.css
@@ -10,6 +10,33 @@ from {opacity: 1.0;}
 to {opacity: 0.0;margin-left: -100%;}
 }
 
+.gambar{
+	float: left;
+}
+
+.pull_left{
+	float: left;
+}
+
+
+.list_left{
+}
+
+.list_barang{
+	float: left;
+	height: 150px;
+	width: 400px;
+	border-style:solid;
+	border-width:2px;
+	margin: 5px;
+}
+
+.list_desc{
+	position: relative;
+	left: 10px;
+	top: 10px;
+}
+
 p {
 	color:black;
 	font-family:Verdana;
