--- a/WebContent/css/homepage.css
+++ b/WebContent/css/homepage.css
@@ -10,36 +10,19 @@ from {opacity: 1.0;}
 to {opacity: 0.0;margin-left: -100%;}
 }
 
-.gambar{
-	float: left;
-}
-
-.pull_left{
-	float: left;
-}
-
-
-.list_left{
-}
-
-.list_barang{
-	float: left;
-	height: 150px;
-	width: 400px;
-	border-style:solid;
-	border-width:2px;
-	margin: 5px;
-}
-
-.list_desc{
-	position: relative;
-	left: 10px;
-	top: 10px;
-}
-
 p {
 	color:black;
 	font-family:Verdana;
+}
+
+h1{
+	margin-left: 20px;
+}
+
+
+body{
+	width: 915px;
+	height: 1000px;
 }
 
 html *{
@@ -224,12 +207,12 @@ a {
 	margin-left:650px;
 }
 
+
 .goodsimage{
-	margin-top:10p;
-	border : solid #0995F8;
-	padding-top:10px;
-	width:500px;
+	border: solid #000000;
+	width:475px;
 	float:left;
+	vertical-align: middle;
 }
 
 .pagination{
@@ -247,7 +230,6 @@ a {
 }
 
 #description{
-	height:100px;
 }
 .status{
 	float: left;
