--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -240,3 +240,19 @@ pre {
 #qty {
     width: 50px;
 }
+
+ul#page {
+	list-style: none; 
+	margin: 0 auto;
+	
+}
+
+li#page2 {
+	display: inline; 
+	margin: 0;
+}
+
+#paginasi {
+	clear: both;
+	width: 100%;
+}
