--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -12,7 +12,7 @@
 		overflow : hidden;
 	}
 	body{
-		background-image : url(../img/site/bg.jpg);
+		background-image : url(../img/site/bg3.jpg);
 		color: black;
 		font-family : Candara;
 	}
@@ -286,8 +286,8 @@ h4 { /*for product name title*/
 	text-align : center;
 	font-weight: normal;
 	font-style: normal;
-	color : #DDDDDD;
-	background: #222;
+	color : black;
+	background: #BCE6E8;
 	padding: 10px;
 }
 
@@ -744,6 +744,8 @@ div.minicart {
   	DETAIL BARANG
 ***********************/
 div.item_price, div.item_detail, div.item_pict {
+	
+	background:#A1B096;
 	display: inline-block;
 	text-align: left;
 	overflow: hidden;
@@ -752,7 +754,7 @@ div.item_price {
 	height:330px;
 	padding: 10px;
 	width:200px;
-	background: rgba(0,0,0,0.5);
+	background:#DAF1F2;
 	overflow: hidden;
 }
 div.item_pict {
@@ -768,7 +770,7 @@ div.item_detail {
 	padding: 10px;
 	width:330px;
 	margin-right:15px;
-	background: rgba(0,0,0,0.5);
+	background: #CEF0F2;
 	overflow: hidden;
 }
 
