--- a/WebContent/css/editbarang.css
+++ b/WebContent/css/editbarang.css
@@ -1,60 +1,15 @@
 /***** View Halaman Barang *****/
 .view {
 	width: 300px;
-	height: 200px;
+	height: 150px;
 	margin: 10px;
 	float: left;
-	border: 10px solid #fff;
+	border: 5px solid #fff;
 	overflow: hidden;
 	position: relative;
-	text-align: center;
-	box-shadow: 0px 1px 2px #e6e6e6;
+	box-shadow: 0px 2px 3px #e6e6e6;
 	cursor: default;
 	background: #fff;
-}
-
-.view .mask {
-	width: 300px;
-	height: 200px;
-	position: absolute;
-	overflow: hidden;
-	top: 0;
-	left: 0;
-	background-color: rgba(146,96,91,0.4);
-	transform: translateX(-300px);
-	-webkit-transform: translateX(-300px);
-	opacity: 0;
-}
-
-.view:hover .mask {
-	transform: translateX(0px);
-	-webkit-transform: translateX(0px);
-	opacity: 1;
-	transition: all 0.4s ease-in-out;
-}
-
-.view img {
-	display: block;
-	position: relative;
-	transition: all 0.3s ease-in-out;
-}
-
-.view:hover img {
-	transform: translateX(300px);
-	-webkit-transform: translateX(300px);
-	transition-delay: 0.1s;
-}
-
-.view h2 {
-	text-transform: uppercase;
-    color: #000;
-    text-align: center;
-    position: relative;
-    font-size: 17px;
-    padding: 10px;
-    background: rgba(255, 255, 255, 0.5);
-    margin: 20px 0 0 0;
-	box-shadow: 0px 1px 3px rgba(159, 141, 140, 0.5);
 }
 
 .view p {
@@ -69,11 +24,6 @@
 	transition: all 0.2s linear;
 }
 
-.view:hover p {
-	opacity: 1;
-	transition-delay: 0.4s;
-}
-
 .view a.info {
 	display: inline-block;
     text-decoration: none;
@@ -84,8 +34,29 @@
     box-shadow: 0 0 1px #000;
 }
 
-.view a.info:hover {
-	box-shadow: 0 0 1px #000;
+.view img {
+	display: inline;
+	float:left;
+}
+
+.view .tools{
+	position:absolute;
+	left:275px;
+}
+
+.view .imgattr{
+	display:inline;
+	height:100px;
+}
+
+.view .attribute{
+	display:inline;
+	float:left;
+	padding-left:5px;
+}
+
+.view .description{
+	display:-webkit-inline-flex;
 }
 
 #index {
@@ -93,4 +64,9 @@
 	margin-left:auto; 
 	margin-right:auto;
 }
+
+#sort{
+	text-align:right;
+}
+
 
