--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -119,7 +119,7 @@
 			}
 			
 			div.permenu:hover div.menutxt{
-				background : #bca549;
+				background : #BBC9C9;
 			}
 
 /***********************
@@ -1168,7 +1168,7 @@ div.orderdetail{
 }
 
 div.orderdetail h4{
-	color : white;
+	color : black;
 	line-height : 12px;
 }
 
@@ -1188,7 +1188,7 @@ div.buyerdetail ul {
 }
 
 div.buyerdetail h4{
-	color : white;
+	color : black;
 	line-height : 12px;
 }
 
