--- a/WebContent/css/list.css
+++ b/WebContent/css/list.css
@@ -29,3 +29,30 @@
 	position: relative;
 	top: 15px;
 }
+
+.search_image{
+	position: relative;
+	left: 5px;
+	top: -1px;
+}
+
+.sbox{
+	margin-top: -13px;
+	padding-top: 10px;
+	padding-left: 50px;
+	height: 40px;
+	border-style:solid;
+	border-width:2px;
+}
+
+.sb_value{
+	float: left;
+	position: relative;
+	top: 2px;
+}
+
+.sb_value2{
+	float: left;
+	position: relative;
+	top: 3px;
+}
