--- a/WebContent/css/homepage.css
+++ b/WebContent/css/homepage.css
@@ -21,8 +21,8 @@ h1{
 
 
 body{
-	width: 915px;
-	height: 1000px;
+	background-color: black;
+	height: 100%;
 }
 
 html *{
@@ -52,12 +52,12 @@ html *{
 }
 
 .page_container {
-	width: 960px;
-	height: 750px;
+	width: 910px;
 	margin: auto;
 	border-radius: 10px;
 	margin-top: 15px;
-	margin-bottom: 15px;
+	padding-bottom: 15px;
+	background-color: #C32148;
 }
 
 #item_status {
@@ -126,7 +126,7 @@ a {
 }
 
 .text_navigation {
-	width: 177px;
+	width: 176px;
 	height: 30px;
 	padding-top:8px;
 	text-align: center;
