--- a/src/ruserba/WebContent/css/style.css
+++ b/src/ruserba/WebContent/css/style.css
@@ -13,6 +13,7 @@
 	}
 	body{
 		background-image : url(../img/site/bg.jpg);
+		background-attachment: fixed;
 		color: #fff;
 		font-family : Candara;
 	}
@@ -704,19 +705,20 @@ div.vertdiv {
 }
 
 div.itembox {
-	margin: 4px 0px;
-	width: 180px;
-	height: 175px;
+	margin: 20px 60px;
+	width: 230px;
+	height: 226px;
 	overflow: hidden;
 	display: inline-block;
 	margin-right: 5px;
 	background-color: white;
 	border: 2px solid white;
+	box-shadow: 10px 10px 10px rgba(0,0,0,.9);
 }
 
 div.itembox_img {
-	width: 180px;
-	height: 175px;
+	width: 230px;
+	height: 226px;
 	overflow: hidden;
 	background-color: white;
 }
@@ -738,8 +740,8 @@ div.minicart_icon {
 }
 
 div.minicart {
-	width: 170px;
-	height: 165px;
+	width: 230px;
+	height: 226px;
 	padding: 5px;
 	background: #444;
 }
@@ -778,8 +780,8 @@ div.item_detail {
 
 div.item_name {
 	background:rgba(0,0,0,0.5);
-	margin-top:-170px;
-	width: 170px;
+	margin-top:-221px;
+	width: 220px;
 	height: 25px;
 	display: block;
 	position: absolute;
@@ -836,8 +838,8 @@ textarea.req_msg {
 }
 
 textarea.req_msg.small {
-	width: 160px;
-	height: 50px;
+	width: 210px;
+	height: 97px;
 }
 
 input.qty {
@@ -1423,4 +1425,29 @@ div.hide {
 }
 div.show {
 	display: block;
+}
+#loader {
+	background: #bca549;
+	padding:10px;
+	text-align: center;
+}
+.hidden {
+	display:none;
+}
+.show {
+	display:inline-block;
+}
+#suggestions {
+	position: absolute;
+	left: 20px;
+	top: 85px;
+	list-style: none;
+	background: #fff;
+	padding: 10px;
+	z-index: 999;
+	color:#000;
+	width: 140px;
+}
+#suggestions ul {
+	list-style: none;
 }
