--- a/WebContent/css/homepage.css
+++ b/WebContent/css/homepage.css
@@ -19,6 +19,24 @@ h1{
 	margin-left: 20px;
 }
 
+.cart_buy{
+	
+}
+
+.view_cart{
+	position: relative;
+	top: 10px;
+	left: 3px;
+}
+
+.main_navigation{
+	margin-top: -13px;
+	padding-top: 10px;
+	padding-left: 50px;
+	height: 120px;
+	border-style:solid;
+	border-width:2px;
+}
 
 body{
 	background-color: black;
