--- a/WebContent/css/homepage.css
+++ b/WebContent/css/homepage.css
@@ -10,6 +10,10 @@ from {opacity: 1.0;}
 to {opacity: 0.0;margin-left: -100%;}
 }
 
+.search_none{
+	margin-left: 30px;
+}
+
 p {
 	color:black;
 	font-family:Verdana;
@@ -20,7 +24,18 @@ h1{
 }
 
 .cart_buy{
-	
+	position: relative;
+	top: -30px;
+}
+
+.cart_button{
+	position: relative;
+	top: 15px;
+}
+
+.notif{
+	position: relative;
+	top: -10px;
 }
 
 .view_cart{
