--- a/src/ruserba/WebContent/css/style.css
+++ b/src/ruserba/WebContent/css/style.css
@@ -432,6 +432,7 @@ form > input, form > div > input {
     color: #fff;
     font-weight: normal;
     text-decoration: none;
+    line-height: 30px;
     background-color: #666;
     /*-webkit-box-shadow: 0px 3px 0px rgba(50,50,50,1), 0px 3px 5px rgba(0,0,0,.7);
     -moz-box-shadow: 0px 3px 0px rgba(50,50,50,1), 0px 3px 5px rgba(0,0,0,.7);
@@ -733,6 +734,15 @@ div.header_divider {
 
 div.minicart_icon {
 	width: 25px;
+	height: 25px;
+	margin-top : -30px;
+	top : -10px;
+	/*line-height: -10px;*/
+	z-index: 10;
+}
+
+div.minicart_menu {
+	width: 200px;
 	height: 25px;
 	margin-top : -30px;
 	top : -10px;
@@ -1451,6 +1461,9 @@ div.show {
 }
 #suggestions ul {
 	list-style: none;
+}
+.full {
+	width: 100%;
 }
 
 /***********
