--- a/WebContent/css/homepage.css
+++ b/WebContent/css/homepage.css
@@ -10,6 +10,10 @@ from {opacity: 1.0;}
 to {opacity: 0.0;margin-left: -100%;}
 }
 
+.inline_form{
+	display: inline;
+}
+
 .search_none{
 	margin-left: 30px;
 }
