--- a/WebContent/css/adminbarang.css
+++ b/WebContent/css/adminbarang.css
@@ -1,4 +1,40 @@
-/***** View Halaman Barang *****/
+/***** View Halaman Admin Barang *****/
+
+.index {
+	width:1100px; 
+	margin-left:auto; 
+	margin-right:auto;
+}
+
+.index #sort{
+	text-align:right;
+}
+
+.index .headertools #add{
+	position:absolute;
+	left: 760px;
+	bottom: 280px;
+	width:20px;
+	height:20px;
+}
+
+.index .headertools #edit{
+	position:absolute;
+	left: 790px;
+	bottom: 280px;
+	width:20px;
+	height:20px;
+}
+
+.index .headertools #delete{
+	position:absolute;
+	left: 820px;
+	bottom: 280px;
+	width:20px;
+	height:20px;
+}
+
+
 .view {
 	width: 300px;
 	height: 150px;
@@ -44,6 +80,23 @@
 	left:275px;
 }
 
+.view .tools #edit{
+	position : absolute;
+	border: none;
+	left : 275 px;
+	width : 20px;
+	height : 20px;
+}
+
+.view .tools #delete{
+	position : absolute;
+	border: none;
+	left : 275 px;
+	width : 20px;
+	height : 20px;
+}
+
+
 .view .imgattr{
 	display:inline;
 	height:100px;
@@ -57,16 +110,6 @@
 
 .view .description{
 	display:-webkit-inline-flex;
-}
-
-#index {
-	width:1100px; 
-	margin-left:auto; 
-	margin-right:auto;
-}
-
-#sort{
-	text-align:right;
 }
 
 
