--- a/WebContent/css/homepage.css
+++ b/WebContent/css/homepage.css
@@ -14,6 +14,11 @@ to {opacity: 0.0;margin-left: -100%;}
 	display: inline;
 }
 
+.view_cart_button{
+	position: relative;
+	top: -13px;
+}
+
 .search_none{
 	margin-left: 30px;
 }
