--- a/WebContent/css/homepage.css
+++ b/WebContent/css/homepage.css
@@ -1,3 +1,30 @@
+.opening{
+	margin-top: -15px;
+	margin-left: -8px;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: white;
+	animation-delay:5s;
+	-webkit-animation-delay:5s; /* Safari and Chrome */
+	animation:myfirst 5s forwards;
+	-webkit-animation:myfirst 5s forwards; /* Safari and Chrome */
+}
+
+.sort_by{
+	position: relative;
+	top: 5px;
+	left: 10px;
+}
+
+.content{
+	position: relative;
+	font-size: 50px;
+	top: 50%;
+	left: 30%;
+	width: 70%;
+}
+
 .inline_form{
 	display: inline;
 }
