--- a/src/css/main.css
+++ b/src/css/main.css
@@ -324,3 +324,19 @@ a {
 	vertical-align:top;
 	color:rgb(75, 64, 31);
 }
+
+#header_kumpulankategori{
+    margin-top: 10px;
+    margin-left: 180px;
+    height:25px;
+}
+
+.header_kategori {
+    float:left;
+    margin-left:30px;
+}
+
+.header_kategori a{
+    color:rgb(177, 189, 53);
+    font-size:18px;;
+}
