--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -156,7 +156,6 @@ h1 small {
 }
 .content {
 	padding:0 0 20px;
-	border-bottom:1px solid #000;
 }
 .content_resize {
 	margin:0 auto;
@@ -166,10 +165,12 @@ h1 small {
 	border:1px solid #fff;
 }
 .content .mainbar {
+	font-size:14px;
+	font-weight:400;
 	margin: 0;
 	padding: 0;
 	float: left;
-	width: 620px;
+	width: 120px;
 }
 .content .mainbar h2 {
 	font-size:30px;
